# video-editor-monorepo

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  test.js  test2.js  turbo.json
apps/web/: next.config.js  package.json  tailwind.config.js  test-inference-import.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: index.ts
apps/web/components/agent/: AgentPanel.tsx  ChatView.tsx  TerminalView.tsx
apps/web/components/editor/: EditorLayout.tsx  Header.tsx
apps/web/components/hooks/: useAgent.ts  useTimeline.ts  useTimelineKeyboard.ts  useWebGPU.ts
apps/web/components/modals/: ExportModal.tsx  SettingsModal.tsx  ShortcutsModal.tsx
apps/web/components/panels/: EffectsLibrary.tsx  FiltersPanel.tsx  MediaBrowser.tsx  ProjectSettingsPanel.tsx  PropertiesPanel.tsx  TextPanel.tsx  TransitionsPanel.tsx
apps/web/components/preview/: PreviewPanel.tsx  TransportControls.tsx
apps/web/stores/: agent.ts  editor.ts  index.ts  media.ts  settings.ts  timeline.ts
apps/web/types/: effects.ts
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/icons/: README.md
crates/tauri-app/src/: commands.rs  main.rs  native_decoder.rs
crates/timeline-core/: Cargo.toml
crates/timeline-core/src/: clip.rs  error.rs  lib.rs  marker.rs  media_source.rs  rational_time.rs  time_range.rs  timeline.rs  track.rs  transition.rs
crates/wasm-bindings/: Cargo.toml
crates/wasm-bindings/src/: clip_wasm.rs  lib.rs  timeline_wasm.rs  track_wasm.rs
(+44 files in other folders)
