[workspace]
resolver = "2"
members = [
    "crates/timeline-core",
    "crates/wasm-bindings",
    "crates/tauri-app",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
wgpu = "22.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
