[package]
name = "wasm-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
timeline-core = { path = "../timeline-core" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde_json = { workspace = true }
